--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="envelope-container">
         <div class="envelope">
             <div class="envelope-back"></div>
-            <div class="envelope-flap"></div>
+            <div class="envelope-flap">
+                <div class="flap-front"></div>
+                <div class="flap-back"></div>
+            </div>
             <div class="envelope-front"></div>
     <div class="card">
         <div class="card-border">
